tests/functional/lang/eval-fail-toXML-mutual-recursion.err.exp
error:
       … while calling the 'toXML' builtin
         at /pwd/lang/eval-fail-toXML-mutual-recursion.nix:9:1:
            8| in
            9| builtins.toXML a
             | ^
           10|

       error: infinite recursion encountered while converting Nix value to XML: the value at .x.y is the same as the top-level value (only cycle-free Nix values can be converted to XML)
       at /pwd/lang/eval-fail-toXML-mutual-recursion.nix:2:7:
            1| let
            2|   a = {
             |       ^
            3|     x = b;
